--- a/music-player-audio-player/index.html
+++ b/music-player-audio-player/index.html
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-  <a class="button" href="https://sparksmediasite.github.io/site/index.html">Back</a>
+  <a  href="https://sparksmediasite.github.io/site/index.html">Back</a>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
 
   
