--- a/music-player-audio-player/index.html
+++ b/music-player-audio-player/index.html
@@ -63,8 +63,7 @@
         </div>
       </div>
     </div>
-
-  <button  href="https://sparksmediasite.github.io/site/index.html">Back</button>
+<a target="_blank" id="ytd_link" href="https://sparksmediasite.github.io/site/index.html">YouTube Channel</a>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
 
   
