--- a/music-player-audio-player/index.html
+++ b/music-player-audio-player/index.html
@@ -63,7 +63,7 @@
         </div>
       </div>
     </div>
-<a target="_blank" id="ytd_link" href="https://sparksmediasite.github.io/site/index.html">YouTube Channel</a>
+<a target="_blank" id="ytd_link" href="https://sparksmediasite.github.io/site/index.html">Back to Home</a>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
 
   
